--- a/tugas-3/index.html
+++ b/tugas-3/index.html
@@ -5,9 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Liputan 6</title>
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
+
 <body>
     <header>
+        <span>LIPUTAN 6</span>
+        <form>
+            <input type="text" name="text" class="search" placeholder="Berita apa yang ingin anda baca">
+            <input type="submit" name="submit" class="submit" value="CARI">
+        </form>
         <nav>
             <ul>
                 <li>
