--- a/tugas-3/index.html
+++ b/tugas-3/index.html
@@ -14,7 +14,7 @@
             <input type="text" name="text" class="search" placeholder="Berita apa yang ingin anda baca">
             <input type="submit" name="submit" class="submit" value="CARI">
         </form>
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li>
                     <a href="https://www.liputan6.com/" target="_blank">HOME</a>
@@ -143,7 +143,13 @@
             </section>
         </article>
         <aside>
-            <h3>Tahap Satu</h3>
+            <div>
+                <select id="hobi" name="Tahap 1">
+                    <option value=tahap1">Tahap 1</option>
+                    <option value="tahap2">Tahap 2</option>
+                    <option value="tahap3">Tahap 3</option>
+                 </select>
+            </div>
             <ul>
                 <li>
                     <h4>14 Juni 2023 - 14 Juni 2024</h4>
