--- a/tugas-3/index.html
+++ b/tugas-3/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <header>
-        <span>LIPUTAN 6</span>
-        <form>
-            <input type="text" name="text" class="search" placeholder="Berita apa yang ingin anda baca">
-            <input type="submit" name="submit" class="submit" value="CARI">
-        </form>
+        <div>
+            <span>LIPUTAN 6</span>
+        </div>
+        <div>
+            <form>
+                <input type="text" name="text" class="search" placeholder="Berita apa yang ingin anda baca">
+                <input type="submit" name="submit" class="submit" value="CARI">
+            </form>
+        </div>
         <nav class="navbar">
             <ul>
                 <li>
