--- a/DBS_dicoding/index.html
+++ b/DBS_dicoding/index.html
@@ -17,6 +17,7 @@
         <li>Wisata</li>
     </ul>
     <h2>Sejarah</h2>
+    <img src="./assets/history.jpg" alt="Sejarah">
     <p>
         Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya
         sungai Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk
@@ -37,6 +38,7 @@
         Pertiwi tempat Banda berada.
     </p>
     <h2>Geografis</h2>
+    <img src="./assets/geografis.jpg" alt="Geografis">
     <p>
         Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
         wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota ini
@@ -65,6 +67,7 @@
     </p>
     
     <h3>Farm House Lembang</h3>
+    <img src="./assets/farm-house.jpg" alt="farm house">
     <p>
         Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata
         yang tidak pernah sepi pengunjung. Selain karena letaknya strategis,
@@ -73,6 +76,7 @@
     </p>
     
     <h3>Observatorium Bosscha</h3>
+    <img src="./assets/bosscha.jpg" alt="Bosscha">
     <p>
         Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt
         Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan Teleskop Surya.
