--- a/tugas-3/index.html
+++ b/tugas-3/index.html
@@ -65,7 +65,7 @@
     <main>
         <article>
             <section>
-                <div class="container">
+                <div class="">
                     <img src="https://cdn0-production-images-kly.akamaized.net/6_TUtHiwTEACJqQsRtSK_eJeWb8=/200x112/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/3183850/original/032527500_1595121283-200719_BOLA_GANJIL_300x-100.jpg"
                         alt=" " />
                 </div>
