add image position

--- a/tugas-3/index.html
+++ b/tugas-3/index.html
@@ -65,7 +65,7 @@
     <main>
         <article>
             <section>
-                <div class="">
+                <div class="container">
                     <img src="https://cdn0-production-images-kly.akamaized.net/6_TUtHiwTEACJqQsRtSK_eJeWb8=/200x112/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/3183850/original/032527500_1595121283-200719_BOLA_GANJIL_300x-100.jpg"
                         alt=" " />
                 </div>
@@ -81,6 +81,7 @@
                         dalam mengingat pun menghadirkan sejumlah kisah unik.
                     </p>
                 </div>
+                <div class="clear"></div>
             </section>
             <section>
                 <img src="https://cdn1-production-images-kly.akamaized.net/s5TXEdkFoVG9FMDe6IObsBpJ3Ls=/200x112/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/4739016/original/077834700_1707469558-Banner_Infografis_Kampanye_Akbar_Terakhir_3_Paslon_Jelang_Pilpres_2024.jpg"
@@ -126,7 +127,7 @@
                     </h3>
                     <p>
                         Jika Anda menyukai tontonan seperti A Killer Paradox, Anda bisa coba menonton film dan
-                        serial-serial berikut ini
+                        serial-serial berikut ini.
                     </p>
                 </div>
             </section>
@@ -147,6 +148,7 @@
                         Palestina.
                     </p>
                 </div>
+                <div class="clear"></div>
             </section>
         </article>
         <aside>
