--- a/DBS_dicoding/index.html
+++ b/DBS_dicoding/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <header>
+    <header class="position">
         <div class="jumbotron">
             <h1>Bandung</h1>
             <p>
