--- a/tugas-3/index.html
+++ b/tugas-3/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div>
+    <header class="">
+        <div class="">
             <span>LIPUTAN 6</span>
         </div>
         <div>
@@ -69,7 +69,6 @@
                     <img src="https://cdn0-production-images-kly.akamaized.net/6_TUtHiwTEACJqQsRtSK_eJeWb8=/200x112/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/3183850/original/032527500_1595121283-200719_BOLA_GANJIL_300x-100.jpg"
                         alt=" " />
                 </div>
-                
                 <div>
                     <h5>BOLA</h5>
                     <h3>
@@ -84,8 +83,10 @@
                 <div class="clear"></div>
             </section>
             <section>
-                <img src="https://cdn1-production-images-kly.akamaized.net/s5TXEdkFoVG9FMDe6IObsBpJ3Ls=/200x112/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/4739016/original/077834700_1707469558-Banner_Infografis_Kampanye_Akbar_Terakhir_3_Paslon_Jelang_Pilpres_2024.jpg"
-                    alt="" />
+                <div class="container">
+                    <img src="https://cdn1-production-images-kly.akamaized.net/s5TXEdkFoVG9FMDe6IObsBpJ3Ls=/200x112/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/4739016/original/077834700_1707469558-Banner_Infografis_Kampanye_Akbar_Terakhir_3_Paslon_Jelang_Pilpres_2024.jpg"
+                        alt="" />
+                </div>
                 <div>
                     <h5>INFOGRAFIS</h5>
                     <h3>
@@ -99,12 +100,14 @@
                         Kampanye akbar Anies-Muhaimin di JIS akan dimulai pukul 07.00 WIB.
                     </p>
                 </div>
+                <div class="clear"></div>
             </section>
             <section>
-                <img src="https://cdn1-production-images-kly.akamaized.net/4FSKp_M_mJEqz9cEozl4T8CCXAA=/200x112/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/4739617/original/081768400_1707549554-20240210-Kampanye_Akbar_Anies-Muhaimin-HER_5.jpg"
-                    alt="">
-                <div>
-                    <h5>EKONOMI</h5>
+                <div class="container">
+                    <img src="https://cdn1-production-images-kly.akamaized.net/4FSKp_M_mJEqz9cEozl4T8CCXAA=/200x112/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/4739617/original/081768400_1707549554-20240210-Kampanye_Akbar_Anies-Muhaimin-HER_5.jpg"
+                        alt="">
+                </div>
+                <h5>EKONOMI</h5>
                     <h3>
                         Anies Baswedan Kampanye Akbar Terakhir 3 Paslon Jelang Pilpres 2024
                     </h3>
@@ -116,11 +119,13 @@
                         saja.
                     </p>
                 </div>
+                <div class="clear"></div>
             </section>
             <section>
-                <img src="https://cdn1-production-images-kly.akamaized.net/sUQ-CuCeDknLjQ-3kA7wpKCcgnk=/0x181:749x603/200x112/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/4739159/original/082012600_1707476842-a_killer.jpg"
-                    alt="">
-                <div>
+                <div class="container">
+                    <img src="https://cdn1-production-images-kly.akamaized.net/sUQ-CuCeDknLjQ-3kA7wpKCcgnk=/0x181:749x603/200x112/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/4739159/original/082012600_1707476842-a_killer.jpg"
+                        alt="">
+                </div>
                     <h5>CITIZEN6</h5>
                     <h3>
                         Seperti A Killer Paradox, 5 Film dan Serial Ini Bikin Tegang Penontonnya.
@@ -130,10 +135,13 @@
                         serial-serial berikut ini.
                     </p>
                 </div>
+                <div class="clear"></div>
             </section>
             <section>
-                <img src="https://cdn0-production-images-kly.akamaized.net/BWTKsQFjEV5iMHBoImFzyllhbaE=/200x112/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/4726827/original/084816900_1706241415-20240126-Pertempuran-Israel-Palestina-AFP-1.jpg"
-                    alt="">
+                <div class="container">
+                    <img src="https://cdn0-production-images-kly.akamaized.net/BWTKsQFjEV5iMHBoImFzyllhbaE=/200x112/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/4726827/original/084816900_1706241415-20240126-Pertempuran-Israel-Palestina-AFP-1.jpg"
+                        alt="">
+                </div>
                 <div>
                     <h5>INTERNASIONAL</h5>
                     <H3>
