add styling float

--- a/DBS_dicoding/index.html
+++ b/DBS_dicoding/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Profil Kota Bandung</title>
-    <link rel="stylesheet" href="./assets/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <header class="position">
+    <header class="">
         <div class="jumbotron">
             <h1>Bandung</h1>
             <p>
@@ -38,7 +38,9 @@
         <div id="content">
             <article id="sejarah" class="card">
                 <h2>Sejarah</h2>
-                <img src="./assets/image/history.jpg" alt="Sejarah" class="featured-image">
+                <div class="">
+                    <img src="./assets/image/history.jpg" alt="Sejarah" class="featured-image">
+                </div>
                 <p>
                     Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya
                     sungai Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk
@@ -120,13 +122,13 @@
         </div>
         <!-- Konten di samping -->
         <aside>
-            <article class="profile card">
+            <article class="profile">
                 <header>
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris van Java</p>
                     <figure>
                         <img src="./assets/image/Bandung_coa.png">
-                        <figcaption>Lambang</figcaption>
+                        <figcaption>Lambang</figcaption>                    
                     </figure>
                 </header>
                 <section>
