--- a/DBS_dicoding/index.html
+++ b/DBS_dicoding/index.html
@@ -122,7 +122,7 @@
         </div>
         <!-- Konten di samping -->
         <aside>
-            <article class="profile">
+            <article class="profile card">
                 <header>
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris van Java</p>
