--- a/DBS_dicoding/index.html
+++ b/DBS_dicoding/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Halaman Profil Kota Bandung</title>
     <link rel="stylesheet" href="./styles/styles.css">
 
@@ -35,11 +36,12 @@
         </nav>
     </header>
     <main>
+        <!-- Isi -->
         <div id="content">
             <article id="sejarah" class="card">
                 <h2>Sejarah</h2>
                 <div class="">
-                    <img src="./assets/image/history.jpg" alt="Sejarah" class="featured-image">
+                    <img src="./assets/image/history.jpg" alt="Sejarah" class="featured-image" />
                 </div>
                 <p>
                     Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya
@@ -64,7 +66,7 @@
             
             <article id="geografis" class="card">
                 <h2>Geografis</h2>
-                <img src="./assets/image/geografis.jpg" alt="Geografis" class="featured-image">
+                <img src="./assets/image/geografis.jpg" alt="Geografis" class="featured-image" />
                 <p>
                     Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
                     wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota ini
@@ -95,7 +97,7 @@
             
                 <section>
                     <h3>Farm House Lembang</h3>
-                    <img src="./assets/image/farm-house.jpg" alt="farm house" class="featured-image">
+                    <img src="./assets/image/farm-house.jpg" alt="farm house" class="featured-image" />
                     <p>
                         Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata
                         yang tidak pernah sepi pengunjung. Selain karena letaknya strategis,
@@ -105,7 +107,7 @@
                 </section>
                 <section>
                     <h3>Observatorium Bosscha</h3>
-                    <img src="./assets/image/bosscha.jpg" alt="Bosscha" class="featured-image">
+                    <img src="./assets/image/bosscha.jpg" alt="Bosscha" class="featured-image" />
                     <p>
                         Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt
                         Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan Teleskop Surya.
@@ -127,7 +129,7 @@
                     <h2>Kota Bandung</h2>
                     <p>Kota Kembang Paris van Java</p>
                     <figure>
-                        <img src="./assets/image/Bandung_coa.png">
+                        <img src="./assets/image/Bandung_coa.png" />
                         <figcaption>Lambang</figcaption>                    
                     </figure>
                 </header>
