--- a/DBS_dicoding/index.html
+++ b/DBS_dicoding/index.html
@@ -35,7 +35,7 @@
         </nav>
     </header>
     <main>
-        <!-- Isi -->
+        <!-- Konten Utama -->
         <div id="content">
             <article id="sejarah" class="card">
                 <h2>Sejarah</h2>
