--- a/dicoding/index.html
+++ b/dicoding/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Profil Kota Bandung</title>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href=".//assets/styles/styles.css">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
