--- a/dicoding/app.html
+++ b/dicoding/app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page Dicoding Indonesia</title>
-    <link rel="stylesheet" href=".//assets/styles/app.css">
+    <link rel="stylesheet" href="./styles/app.css">
     
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
