--- a/submission/index.html
+++ b/submission/index.html
@@ -3,30 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio</title>
+    <title>Website Fahrul</title>
     <link rel="stylesheet" href="./styles/style.css">
 
-
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
+    
 </head>
 <body>
     <header>
-        <div class="warsun">
+        <div class="warsun-container">
             <h1>Warung Sunda</h1>
         </div>
-        <nav>
+        <nav class="nav-list">
             <ul>
-                <li>
-                    <a href=""></a>
-                </li>
-                <li>
-                    <a href=""></a>
-                </li>
-                <li>
-                    <a href=""></a>
-                </li>
-                <li>
-                    <a href=""></a>
-                </li>
+                <li><a href="#">Beranda</a></li>
+                <li><a href="#">Daftar Menu</a></li>
+                <li><a href="#">Tentang Kami</a></li>
+                <li><a href="#">Kontak</a></li>
+                <li><a href="" class="tbl-ungu">Daftar</a></li>
             </ul>
         </nav>
     </header>
