--- a/submission/index.html
+++ b/submission/index.html
@@ -16,45 +16,35 @@
 <body>
     <header>
         <div class="jumbotron">
-            <h1>Bandung</h1>
-            <p>
-                Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu
-                kota provinsi tersebut.
-            </p>
+            <h1>Fahrul Sidik</h1>
         </div>
         <nav>
             <ul>
                 <li>
-                    <a href="#sejarah">Sejarah</a>
+                    <a href="#beranda">Beranda</a>
                 </li>
                 <li>
-                    <a href="#geografis">Geografis</a>
+                    <a href="#tentangsaya">Tentang Saya</a>
                 </li>
                 <li>
-                    <a href="#wisata">Wisata</a>
+                    <a href="#kontak">Kontak</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
         <!-- Konten Utama -->
-        <div id="content">
-            <article id="sejarah" class="card">
-                <h2>Sejarah</h2>
+        <div class="content">
+            <div class="content-description">
+                <h1>Sejarah</h1>
                 <div class="">
                     <img src="./assets/image/history.jpg" alt="Sejarah" class="featured-image" />
                 </div>
                 <p>
-                    Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya
-                    sungai Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk
-                    telaga. Legenda yang diceritakan oleh orang-orang tua di Bandung
-                    mengatakan bahwa nama Bandung diambil dari sebuah kendaraan air yang
-                    terdiri dari dua perahu yang diikat berdampingan yang disebut perahu
-                    bandung yang digunakan oleh Bupati Bandung, R.A. Wiranatakusumah II, untuk
-                    melayari Ci Tarum dalam mencari tempat kedudukan kabupaten yang baru untuk
-                    menggantikan ibu kota yang lama di Dayeuhkolot.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Fugiat vero dolor sit id officiis, nisi ab iste ipsa aut itaque sed, nesciunt provident officia, nihil deserunt dolorem natus! Dignissimos, nihil?.
                 </p>
-                <p>
+                <!-- <p>
                     Berdasarkan filosofi Sunda, kata Bandung juga berasal dari kalimat
                     Nga-Bandung-an Banda Indung, yang merupakan kalimat sakral dan luhur
                     karena mengandung nilai ajaran Sunda. Nga-Bandung-an artinya menyaksikan
@@ -62,7 +52,7 @@
                     di bumi dan atmosfer, baik makhluk hidup maupun benda mati. Sinonim dari
                     banda adalah harta. Indung berarti Ibu atau Bumi, disebut juga sebagai Ibu
                     Pertiwi tempat Banda berada.
-                </p>
+                </p> -->
             </article>
 
             <article id="geografis" class="card">
@@ -124,7 +114,7 @@
             </article>
         </div>
         <!-- Konten di samping -->
-        <aside>
+        <!-- <aside>
             <article class="profile card">
                 <header>
                     <h2>Kota Bandung</h2>
@@ -161,7 +151,7 @@
                     </table>
                 </section>
             </article>
-        </aside>
+        </aside> -->
     </main>
     <footer>
         <p>Belajar Dasar Pemrograman Web &#169; 2019, Dicoding Academy</p>
