--- a/submission/index.html
+++ b/submission/index.html
@@ -1,160 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Halaman Profil Kota Bandung</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portofolio</title>
 
-    <!-- Google Font -->
+    <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
 </head>
-
 <body>
     <header>
-        <div class="jumbotron">
-            <h1>Fahrul Sidik</h1>
-        </div>
         <nav>
-            <ul>
-                <li>
-                    <a href="#beranda">Beranda</a>
-                </li>
-                <li>
-                    <a href="#tentangsaya">Tentang Saya</a>
-                </li>
-                <li>
-                    <a href="#kontak">Kontak</a>
-                </li>
-            </ul>
+            <div class="wrapper">
+                <div class="logo"><a href=''>Fahrul Sidik</a></div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#courses">Courses</a></li>
+                        <li><a href="#tutors">Tutors</a></li>
+                        <li><a href="#partners">Partners</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="" class="tbl-biru">Sign Up</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <!-- Konten Utama -->
-        <div class="content">
-            <div class="content-description">
-                <h1>Sejarah</h1>
-                <div class="">
-                    <img src="./assets/image/history.jpg" alt="Sejarah" class="featured-image" />
+        <div class="wrapper">
+            <!-- untuk home -->
+            <section id="home">
+                <img
+                    src="./assets/25001216_7040859.jpg" />
+                <div class="kolom">
+                    <p class="deskripsi">Belajar Programming #dirumahaja</p>
+                    <h2>Tetap Sehat, Tetap Semangat</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt, nobis.</p>
+                    <p><a href="" class="tbl-pink">Pelajari Lebih Lanjut</a></p>
                 </div>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Fugiat vero dolor sit id officiis, nisi ab iste ipsa aut itaque sed, nesciunt provident officia, nihil deserunt dolorem natus! Dignissimos, nihil?.
-                </p>
-                <!-- <p>
-                    Berdasarkan filosofi Sunda, kata Bandung juga berasal dari kalimat
-                    Nga-Bandung-an Banda Indung, yang merupakan kalimat sakral dan luhur
-                    karena mengandung nilai ajaran Sunda. Nga-Bandung-an artinya menyaksikan
-                    atau bersaksi. Banda adalah segala sesuatu yang berada di alam hidup yaitu
-                    di bumi dan atmosfer, baik makhluk hidup maupun benda mati. Sinonim dari
-                    banda adalah harta. Indung berarti Ibu atau Bumi, disebut juga sebagai Ibu
-                    Pertiwi tempat Banda berada.
-                </p> -->
-            </article>
-
-            <article id="geografis" class="card">
-                <h2>Geografis</h2>
-                <img src="./assets/image/geografis.jpg" alt="Geografis" class="featured-image" />
-                <p>
-                    Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
-                    wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota ini
-                    terletak di tengah-tengah provinsi Jawa Barat, serta berada pada
-                    ketinggian ±768 m di atas permukaan laut, dengan titik tertinggi di berada
-                    di sebelah utara dengan ketinggian 1.050 meter di atas permukaan laut dan
-                    sebelah selatan merupakan kawasan rendah dengan ketinggian 675 meter di
-                    atas permukaan laut.
-                </p>
-                <p>
-                    Kota Bandung dialiri dua sungai utama, yaitu Sungai Cikapundung dan Sungai
-                    Citarum beserta anak-anak sungainya yang pada umumnya mengalir ke arah
-                    selatan dan bertemu di Sungai Citarum. Dengan kondisi yang demikian,
-                    Bandung selatan sangat rentan terhadap masalah banjir terutama pada musim
-                    hujan.
-                </p>
-            </article>
-
-            <article id="wisata" class="card">
-                <h2>Wisata</h2>
-                <p>
-                    Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan
-                    utama dalam menikmati liburan akhir pekan terutama dari masyarakat yang
-                    berasal dari Jakarta sekitarnya. Selain menjadi kota wisata belanja, kota
-                    Bandung juga dikenal dengan sejumlah besar bangunan lama berarsitektur
-                    peninggalan Belanda.
-                </p>
-
-                <section>
-                    <h3>Farm House Lembang</h3>
-                    <img src="./assets/image/farm-house.jpg" alt="farm house" class="featured-image" />
-                    <p>
-                        Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata
-                        yang tidak pernah sepi pengunjung. Selain karena letaknya strategis,
-                        kawasan ini juga menghadirkan nuansa wisata khas Eropa. Semua itu
-                        diterapkan dalam bentuk spot swafoto Instagramable.
-                    </p>
-                </section>
-                <section>
-                    <h3>Observatorium Bosscha</h3>
-                    <img src="./assets/image/bosscha.jpg" alt="Bosscha" class="featured-image" />
-                    <p>
-                        Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt
-                        Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan Teleskop Surya.
-                        Refraktor Ganda Zeiss adalah jenis teleskop terbesar untuk meneropong
-                        bintang. Benda ini diletakkan pada atap kubah sehingga saat teropong
-                        digunakan, atap tersebut harus dibuka. Observatorium Bosscha boleh
-                        dikunjungi oleh siapapun, tanpa tiket. Namun, bagi yang ingin menggunakan
-                        teleskop Zeiss, wajib mendaftarkan diri. Untuk instansi atau lembaga
-                        pendidikan, diberikan jadwal hari Selasa sampai Jumat. Sementara itu,
-                        kunjungan individu dibuka setiap hari Sabtu.
-                    </p>
-                </section>
-            </article>
-        </div>
-        <!-- Konten di samping -->
-        <!-- <aside>
-            <article class="profile card">
-                <header>
-                    <h2>Kota Bandung</h2>
-                    <p>Kota Kembang Paris van Java</p>
-                    <figure>
-                        <img src="./assets/image/Bandung_coa.png" />
-                        <figcaption>Lambang</figcaption>
-                    </figure>
-                </header>
-                <section>
-                    <h3>Informasi Lainnya</h3>
-
-                    <table>
-                        <tr>
-                            <th>Negara</th>
-                            <td>Indonesia</td>
-                        </tr>
-                        <tr>
-                            <th>Hari jadi</th>
-                            <td>25 September 1810</td>
-                        </tr>
-                        <tr>
-                            <th>Luas Total</th>
-                            <td>167.67 km<sup>2</sup></td>
-                        </tr>
-                        <tr>
-                            <th>Bahasa Daerah</th>
-                            <td>Sunda</td>
-                        </tr>
-                        <tr>
-                            <th>Kode Telepon</th>
-                            <td>+62 22</td>
-                        </tr>
-                    </table>
-                </section>
-            </article>
-        </aside> -->
+            </section>
     </main>
-    <footer>
-        <p>Belajar Dasar Pemrograman Web &#169; 2019, Dicoding Academy</p>
-    </footer>
 </body>
 </html>
