--- a/bmi-calculator-main/bmi-calculator-main/index.html
+++ b/bmi-calculator-main/bmi-calculator-main/index.html
@@ -13,13 +13,24 @@
 
       <form class="calculator">
         <div>
+          <label for="usia">Usia</label>
+          <input type="text" id="usia" value="">
+        </div>
+        <div>
+          <label for="laki_laki">Laki-laki</label>
+          <input id="laki_laki" type="radio" name="jenis_kelamin" value="laki-laki" />
+          
+          <label for="perempuan">Perempuan</label>
+          <input id="perempuan" type="radio" name="jenis_kelamin" value="perempuan" />
+        </div>
+        <div>
           <label for="weight">Weight (kg)</label>
-          <input type="number" id="weight" min="0" step="0.01" value="0" />
+          <input type="number" id="weight" min="0" step="0.01" value="" />
         </div>
 
         <div>
           <label for="height">Height (cm)</label>
-          <input type="number" id="height" min="0" step="0.01" value="0" />
+          <input type="number" id="height" min="0" step="0.01" value="" />
         </div>
 
         <div>
