--- a/bmi-calculator-main/bmi-calculator-main/index.html
+++ b/bmi-calculator-main/bmi-calculator-main/index.html
@@ -6,66 +6,63 @@
     <title>BMI Calculator</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-  </head>
-  <body>
-    <div class="container">
-      <h1>BMI Calculator</h1>
 
-      <form class="calculator">
-        <div>
-          <label for="usia">Usia</label>
-          <input type="text" id="usia" value="">
-        </div>
-        <div>
-          <label for="laki_laki">Laki-laki</label>
-          <input id="laki_laki" type="radio" name="jenis_kelamin" value="laki-laki" />
-          
-          <label for="perempuan">Perempuan</label>
-          <input id="perempuan" type="radio" name="jenis_kelamin" value="perempuan" />
-        </div>
-        <div>
-          <label for="weight">Weight (kg)</label>
-          <input type="number" id="weight" min="0" step="0.01" value="" />
-        </div>
-
-        <div>
-          <label for="height">Height (cm)</label>
-          <input type="number" id="height" min="0" step="0.01" value="" />
-        </div>
-
-        <div>
-          <button type="reset">Reset</button>
-          <button type="submit">Submit</button>
-        </div>
-      </form>
-
-      <section class="output">
-        <h3>Your BMI is</h3>
-        <p id="bmi">0</p>
-        <p id="desc">N/A</p>
-      </section>
-
-      <section class="bmi-scale">
-        <div style="--color: var(--underweight)">
-          <h4>Underweight</h4>
-          <p>&lt; 18.5</p>
-        </div>
-
-        <div style="--color: var(--normal)">
-          <h4>Normal</h4>
-          <p>18.5 – 25</p>
-        </div>
-
-        <div style="--color: var(--overweight)">
-          <h4>Overweight</h4>
-          <p>25 – 30</p>
-        </div>
-
-        <div style="--color: var(--obese)">
-          <h4>Obese</h4>
-          <p>≥ 30</p>
-        </div>
-      </section>
-    </div>
-  </body>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
+</head>
+<body>
+  <div class="container">
+    <h1>BMI Calculator</h1>
+    
+    <form class="calculator">
+      <div>
+        <label for="usia">Usia</label>
+        <input type="text" id="usia" value="">
+      </div>
+      <div>
+        <label for="laki_laki">Laki-laki</label>
+        <input id="laki_laki" type="radio" name="jenis_kelamin" value="laki-laki" />      
+        <label for="perempuan">Perempuan</label>
+        <input id="perempuan" type="radio" name="jenis_kelamin" value="perempuan" />
+      </div>
+      <div>
+        <label for="weight">Weight (kg)</label>
+        <input type="number" id="weight" min="0" step="0.01" value="" />
+      </div>
+      <div>
+        <label for="height">Height (cm)</label>
+        <input type="number" id="height" min="0" step="0.01" value="" />
+      </div>
+      <div>
+        <button type="reset">Reset</button>
+        <button type="submit">Submit</button>
+      </div>   
+    </form>
+    <section class="output">
+      <h3>Your BMI is</h3>
+      <p id="bmi">0</p>
+      <p id="desc">N/A</p>
+    </section>
+    <section class="bmi-scale">
+      <div style="--color: var(--underweight)">
+        <h4>Underweight</h4>
+        <p>&lt; 18.5</p>
+      </div>
+      <div style="--color: var(--normal)">
+        <h4>Normal</h4>
+        <p>18.5 – 25</p>
+      </div>
+      <div style="--color: var(--overweight)">
+        <h4>Overweight</h4>
+        <p>25 – 30</p>
+      </div>
+      <div style="--color: var(--obese)">
+        <h4>Obesitas</h4>
+        <p>≥ 30</p>
+      </div>
+    </section>
+  </div>
+</body>
 </html>
