add div in element select

--- a/tugas-2/index.html
+++ b/tugas-2/index.html
@@ -48,14 +48,16 @@
                 <label for="perempuan">Perempuan</label>
                 <input id="perempuan" type="radio" name="jenis_kelamin" value="perempuan" />
             </div>
-            <label for="hobi">Hobi :</label>
-            <select id="hobi" name="hobi">
-                <option value="berenang">Berenang</option>
-                <option value="membaca">Membaca</option>
-                <option value="bermain game">Bermain Game</option>
-                <option value="olahraga">Olahraga</option>
-                <option value="scroll sosmed">Scroll Sosmed</option>
-            </select>
+            <div>
+                <label for="hobi">Hobi :</label>
+                <select id="hobi" name="hobi">
+                    <option value="berenang">Berenang</option>
+                    <option value="membaca">Membaca</option>
+                    <option value="bermain game">Bermain Game</option>
+                    <option value="olahraga">Olahraga</option>
+                    <option value="scroll sosmed">Scroll Sosmed</option>
+                </select>
+            </div>
             <div>
                 <label>Alamat Lengkap :</label>
                 <textarea name="alamat lengkap" rows="5" cols="30"></textarea>
