--- a/bmi-calculator-main/index.html
+++ b/bmi-calculator-main/index.html
@@ -22,10 +22,12 @@
         <input type="text" id="usia" value="">
       </div>
       <div>
-        <label for="laki_laki">Laki-laki</label>
-        <input id="laki_laki" type="radio" name="jenis_kelamin" value="laki-laki" />      
-        <label for="perempuan">Perempuan</label>
-        <input id="perempuan" type="radio" name="jenis_kelamin" value="perempuan" />
+        <label for="jeniskelamin">Jenis Kelamin</label>
+        <select id="jeniskelamin" name="jeniskelamin">
+          <option value="pilihjeniskelamin">-- Pilih Jenis Kelamin --</option>
+          <option value="lakilaki">Laki-laki</option>
+          <option value="perempuan">Perempuan</option>
+        </select>
       </div>
       <div>
         <label for="weight">Weight (kg)</label>
