--- a/bmi-calculator-main/index.html
+++ b/bmi-calculator-main/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMI Calculator</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
 
-    <!-- Google Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BMI Calculator</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
+
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
 </head>
+
 <body>
   <div class="container">
     <h1>BMI Calculator</h1>
-    
+
     <form class="calculator">
       <div>
-        <label for="usia">Usia</label>
-        <input type="text" id="usia" value="">
+        <label for="age">Age</label>
+        <input type="text" id="age" value="">
       </div>
       <div>
-        <label for="jeniskelamin">Jenis Kelamin</label>
-        <select id="jeniskelamin" name="jeniskelamin">
-          <option value="pilihjeniskelamin">-- Pilih Jenis Kelamin --</option>
-          <option value="lakilaki">Laki-laki</option>
-          <option value="perempuan">Perempuan</option>
+        <label for="gender">Gender</label>
+        <select id="gender" name="gender">
+          <option value="selectgender">-- Select Your Gender --</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
         </select>
       </div>
       <div>
@@ -39,11 +41,11 @@
       </div>
       <div>
         <button type="reset">Reset</button>
-        <button type="submit">Submit</button>
-      </div>   
+        <button type="submit">Count</button>
+      </div>
     </form>
     <section class="output">
-      <h3>Your BMI is</h3>
+      <h3>Your BMI Is</h3>
       <p id="bmi">0</p>
       <p id="desc">N/A</p>
     </section>
@@ -52,19 +54,20 @@
         <h4>Underweight</h4>
         <p>&lt; 18.5</p>
       </div>
-      <div style="--color: var(--normal)">
-        <h4>Normal</h4>
+      <div style="--color: var(--healthy)">
+        <h4>Healthy</h4>
         <p>18.5 – 25</p>
       </div>
       <div style="--color: var(--overweight)">
         <h4>Overweight</h4>
         <p>25 – 30</p>
       </div>
-      <div style="--color: var(--obese)">
-        <h4>Obesitas</h4>
+      <div style="--color: var(--obesity)">
+        <h4>Obesity</h4>
         <p>≥ 30</p>
       </div>
     </section>
   </div>
 </body>
+
 </html>
