--- a/submission/index.html
+++ b/submission/index.html
@@ -33,8 +33,7 @@
         <div class="wrapper">
             <!-- untuk home -->
             <section id="home">
-                <img
-                    src="./assets/25001216_7040859.jpg" />
+                <img src="./assets/25001216_7040859.jpg" />
                 <div class="kolom">
                     <p class="deskripsi">Belajar Programming #dirumahaja</p>
                     <h2>Tetap Sehat, Tetap Semangat</h2>
