--- a/submission/index.html
+++ b/submission/index.html
@@ -12,45 +12,46 @@
     <link rel="stylesheet" href="./styles/style.css">
 
     <!-- --------- FAVICON ---------- -->
-    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/foto.jpg" type="image/x-icon">
 
-    <title>Portfolio | Ludiflex</title>
+    <title>Portfolio | Fahrul</title>
 </head>
 <body>
-    <div class="container">
+    <header> 
         <!-- --------------- HEADER --------------- -->
-        <nav id="header">
-            <div class="nav-logo">
-                <p class="nav-name">Doe</p>
-                <span>.</span>
-            </div>
-            <div class="nav-menu" id="myNavMenu">
-                <ul class="nav_menu_list">
-                    <li class="nav_list">
-                        <a href="#home" class="nav-link active-link">Home</a>
-                        <div class="circle"></div>
-                    </li>
-                    <li class="nav_list">
-                        <a href="#about" class="nav-link">About</a>
-                        <div class="circle"></div>
-                    </li>
-                    <li class="nav_list">
-                        <a href="#projects" class="nav-link">Projects</a>
-                        <div class="circle"></div>
-                    </li>
-                    <li class="nav_list">
-                        <a href="#contact" class="nav-link">Contact</a>
-                        <div class="circle"></div>
-                    </li>
-                </ul>
-            </div>
-            <div class="nav-button">
-                <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
-            </div>
-            <div class="nav-menu-btn">
-                <i class="uil uil-bars" onclick="myMenuFunction()"></i>
-            </div>
-        </nav>
+        <div class="container">
+            <nav id="header-top">
+                <div class="nav-logo">
+                    <p class="nav-name">Fahrul Sidik</p>
+                </div>
+                <div class="nav-menu" id="myNavMenu">
+                    <ul class="nav_menu_list">
+                        <li class="nav_list">
+                            <a href="#home" class="nav-link active-link">Home</a>
+                            <div class="circle"></div>
+                        </li>
+                        <li class="nav_list">
+                            <a href="#about" class="nav-link">About</a>
+                            <div class="circle"></div>
+                        </li>
+                        <li class="nav_list">
+                            <a href="#projects" class="nav-link">Projects</a>
+                            <div class="circle"></div>
+                        </li>
+                        <li class="nav_list">
+                            <a href="#contact" class="nav-link">Contact</a>
+                            <div class="circle"></div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="nav-button">
+                    <button class="btn">Download CV <i class="uil uil-file-alt"></i></button>
+                </div>
+                <div class="nav-menu-btn">
+                    <i class="uil uil-bars" onclick="myMenuFunction()"></i>
+                </div>
+            </nav>
+    </header>
 
 
         <!-- -------------- MAIN ---------------- -->
@@ -59,7 +60,7 @@
             <section class="featured-box" id="home">
                 <div class="featured-text">
                     <div class="featured-text-card">
-                        <span>John Doe</span>
+                        <span>Fahrul Sidik</span>
                     </div>
                     <div class="featured-name">
                         <p>I'm <span class="typedText"></span></p>
@@ -76,13 +77,13 @@
                     <div class="social_icons">
                         <div class="icon"><i class="uil uil-instagram"></i></div>
                         <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                        <div class="icon"><i class="uil uil-dribbble"></i></div>
+                        <div class="icon"><i class="uil uil-facebook"></i></div>
                         <div class="icon"><i class="uil uil-github-alt"></i></div>
                     </div>
                 </div>
                 <div class="featured-image">
                     <div class="image">
-                        <img src="assets/images/avatar.png" alt="avatar">
+                        <img src="./assets/images/foto1.png" alt="avatar">
                     </div>
                 </div>
                 <div class="scroll-icon-box">
@@ -188,8 +189,8 @@
                     <div class="col">
                         <div class="contact-info">
                             <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                            <p><i class="uil uil-envelope"></i> Email: john@doe.com</p>
-                            <p><i class="uil uil-phone"></i> Tel: +250 708 770 000</p>
+                            <p><i class="uil uil-envelope"></i> Email: example@gmail.com</p>
+                            <p><i class="uil uil-phone"></i> Tel: +62 1234 5678 999</p>
                         </div>
                     </div>
                     <div class="col">
@@ -214,7 +215,7 @@
         <!-- --------------- FOOTER --------------- -->
         <footer>
             <div class="top-footer">
-                <p>John Doe .</p>
+                <p>Fahrul Sidik</p>
             </div>
             <div class="middle-footer">
                 <ul class="footer-menu">
@@ -235,7 +236,7 @@
             <div class="footer-social-icons">
                 <div class="icon"><i class="uil uil-instagram"></i></div>
                 <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-                <div class="icon"><i class="uil uil-dribbble"></i></div>
+                <div class="icon"><i class="uil uil-facebook"></i></div>
                 <div class="icon"><i class="uil uil-github-alt"></i></div>
             </div>
             <div class="bottom-footer">
