--- a/tugas-3/index.html
+++ b/tugas-3/index.html
@@ -8,15 +8,12 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
   </head>
   <body>
     <header>
-      <div id="header-top">
-        <div id="header-left">
+    <div id="header-top">
+      <div id="header-left">
           <h1 id="title">LIPUTAN 6</h1>
 
           <input
@@ -51,9 +48,7 @@
             <a href="https://www.liputan6.com/tv" target="_blank">TV</a>
           </li>
           <li>
-            <a href="https://www.liputan6.com/showbiz" target="_blank"
-              >SHOWBIZ</a
-            >
+            <a href="https://www.liputan6.com/showbiz" target="_blank">SHOWBIZ</a>
           </li>
           <li>
             <a href="https://www.liputan6.com/tekno" target="_blank">TEKNO</a>
@@ -65,9 +60,7 @@
             <a href="https://www.liputan6.com/hot" target="_blank">HOT</a>
           </li>
           <li>
-            <a href="https://www.liputan6.com/cek-fakta" target="_blank"
-              >CEK FAKTA</a
-            >
+            <a href="https://www.liputan6.com/cek-fakta" target="_blank">CEK FAKTA</a>
           </li>
           <li>
             <a href="https://www.liputan6.com/islami" target="_blank">ISLAMI</a>
